test-suite/output/bug_17579.out
File "./output/bug_17579.v", line 4, characters 0-26:
The command has indeed failed with message:
Timeout must be > 0.
File "./output/bug_17579.v", line 7, characters 8-9:
Error:
Syntax error: [natural] expected after 'Timeout' (in [vernac_control]).


coqc exited with code 1
